[tool.poetry]
name = "servo-wavefront"
version = "0.1.0"
description = "A servo connector that gathers metrics from Wavefront."
authors = ["Daniel Howell <daniel@kumul.us>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opsani/servo-metrics"
repository = "https://github.com/opsani/servo-metrics"

[tool.poetry.dependencies]
python = "^3.8"
servox = {git = "https://github.com/opsani/servox.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
asynctest = {git = "https://github.com/Martiusweb/asynctest.git", rev = "py3.8"}
freezegun = "^1.0.0"
respx = "^0.16.2"

[tool.poetry.plugins."servo.connectors"]
"servo-metrics" = "servo_metrics:MetricsConnector"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
